
	* oprofile.c: get along with the new UP APIC stuff in 2.4.0ac9
		remove extraneous lock_kernel()
		default buffer size added
		map buffer died
		Use up_and_exit() in kernel thread to fix zombies :P
		Set diethreaddie = 0 in start_thread()
		oprof_put_mapping() added
		we weren't turning OFF kernel/user counting when asked to

	* oprofile.h: move shared stuff to op_user.h

	* dae/Makefile.in: dependencies on op_user.h and version.h 

	* dae/op_start: hide confusing output of op_stop
		--verbose option
		map buffer died

	* dae/opd_proc.c: --verbose option
		don't insist on new sample files
		Rework mapping code
		Be a little more forgiving with unstattable images 

	* dae/opd_util.h:
	* dae/opd_util.c: add fatal flag to opd_get_fsize().

	* dae/oprofiled.h: --verbose option
		move common code to op_user.h

	* dae/oprofiled.c: add --verbose option (very verbose !)
		map buffer died
		Add code for unpacking mapping notifications, rework
		mapping recognition

	* doc/guide.html:
	* doc/guide.lyx: some small updates

	* pp/oprofpp.c: fix segfault on failure to open binary.
		add --verbose option

	* pp/oprofpp.h: add --verbose option

2000-01-12  John Levon  <moz@compsoc.man.ac.uk>

	* oprofile.c: use standard kernel names for MSRs.
		Don't re-do fixmap if UP oopser patch is installed.
		Allow UP oopser to work if patches enabled, disable
		otherwise

	* oprofile.h: use standard kernel names for MSRs.

	* oprofile_k.c: only include fixmap code if necessary

	* configure.in: bump minor version

2000-12-15  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: default to /lib/modules/`uname -r`/build
		as kernel source directory

	* doc/guide.lyx:
	* doc/guide.html: update documentation

2000-12-13  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: bump minor version

	* oprofile.c: added KERN_<whatever> where needed,
		exclude the Pentium IV	

	* pp/oprofpp.c: allow "oprofpp -l /bin/mv" and friends,
		some minor fixes
